## Process this file with automake to produce Makefile.in 

noinst_PROGRAMS = single2forks forks2single dumprsrcmap dumpwad
dumprsrcmap_SOURCES = dumprsrcmap.cpp
dumpwad_SOURCES = dumpwad.cpp

INCLUDES = -I$(top_srcdir)/Source_Files/CSeries -I$(top_srcdir)/Source_Files/Misc \
  -I$(top_srcdir)/Source_Files/Network
