## Process this file with automake to produce Makefile.in 

EXTRA_DIST = headertest/README

# these are currently broken
# noinst_PROGRAMS = single2forks forks2single dumprsrcmap dumpwad
#dumprsrcmap_SOURCES = dumprsrcmap.cpp
#dumpwad_SOURCES = dumpwad.cpp

AM_CPPFLAGS = -I$(top_srcdir)/Source_Files/CSeries -I$(top_srcdir)/Source_Files/Files \
  -I$(top_srcdir)/Source_Files/GameWorld -I$(top_srcdir)/Source_Files/Input \
  -I$(top_srcdir)/Source_Files/Misc -I$(top_srcdir)/Source_Files/ModelView \
  -I$(top_srcdir)/Source_Files/Network \
  -I$(top_srcdir)/Source_Files/RenderMain -I$(top_srcdir)/Source_Files/RenderOther \
  -I$(top_srcdir)/Source_Files/Sound -I$(top_srcdir)/Source_Files/XML \
  -I$(top_srcdir)/Source_Files
