## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libcseries.a
libcseries_a_SOURCES = byte_swapping.cpp byte_swapping.h csalerts_sdl.cpp \
  csalerts.h cscluts_sdl.cpp csdialogs.h csdialogs_sdl.cpp cscluts.h cseries.h \
  csfiles.h csfonts.h csmacros.h csmisc_sdl.cpp csmisc.h cspixels.h \
  csstrings_sdl.cpp csstrings.h cstypes.h mytm.h mytm_sdl.cpp sdl_cseries.h

EXTRA_libcseries_a_SOURCES = csfiles_beos.cpp

INCLUDES = -I$(top_srcdir)/Source_Files/Misc
